# dvrpsim

./: .gitignore  .gitlab-ci.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/src/case_studies/dpdp/: 1_prob.md  2_data.md  3_model.md  4_demo.md
docs/src/case_studies/rmdp/: 1_prob.md  2_data.md  3_model.md  4_demo.md
docs/src/case_studies/sddp/: 1_prob.md  2_data.md  3_model.md  4_demo.md
docs/src/introduction/: basics.md
docs/src/tutorial/: tutorial_01.md  tutorial_02.md  tutorial_03a.md  tutorial_03b.md  tutorial_04.md  tutorial_05.md
examples/case_studies/dpdp/: dpdp_main.py  dpdp_problemdata.py  dpdp_routing.py
examples/case_studies/rmdp/: rmdp_main.py  rmdp_problemdata.py
examples/case_studies/sddp/: sddp_main.py  sddp_probdata.py
examples/tutorial/: tutorial_01.py  tutorial_02.py  tutorial_03.py  tutorial_04.py  tutorial_05.py
src/case_studies/dpdp/: 1_prob.html  2_data.html  3_model.html  4_demo.html
src/case_studies/rmdp/: 1_prob.html  2_data.html  3_model.html  4_demo.html
src/case_studies/sddp/: 1_prob.html  2_data.html  3_model.html  4_demo.html
src/dvrpsim/: __init__.py  environment.py  exceptions.py  model.py
src/dvrpsim/elements/: location.py  order.py  vehicle.py  visit.py
src/dvrpsim/utils/: checker.py  distances.py  logging.py  order_providers.py  routing.py  statistics.py  updaters.py
src/introduction/: basics.html
src/tutorial/: tutorial_01.html  tutorial_02.html  tutorial_03a.html  tutorial_03b.html  tutorial_04.html  tutorial_05.html
(+4 files in other folders)
