[project]
name = "dvrpsim"
version = "0.0.1"
authors = [
  { name="Markó Horváth", email="marko.horvath@sztaki.hu" },
  { name="Tímea Tamási", email="tamasitimea@student.elte.hu" }
]
description = "A package for modeling and simulating dynamic vehicle routing problems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "simpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sztaki-hu/dvrpsim"
